zSugar was renamed to bSugar to match bTactic branding

--- a/com_irontec_zsugar_eu.properties
+++ b/com_irontec_zsugar_eu.properties
@@ -1,5 +1,5 @@
 # zSugar zimlet properties
-zsugar_title = zsugar: Zimbra-SugarCRM integrazioa
+zsugar_title = bsugar: Zimbra-SugarCRM integrazioa
 zsugar_tooltip = SugarCRM Integrazio Zimlet-a
 zsugar_powered = http://www.irontec.com
 
@@ -33,7 +33,7 @@ zsugar_connected = Zure saioa autentifikatuta dago.
 
 
 
-zsugar_aboutText_pre = <p class='big center'>zSugar&nbsp;
+zsugar_aboutText_pre = <p class='big center'>bSugar&nbsp;
 zsugar_aboutText_post = </p><p class='med center'>Sugar CRM Integrazio Zimlet-a</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Kultura Sailak (Hizkuntza Politikarako Sailburuordetzak) diruz lagundutako egitasmoa.</p>
 
 
