--- a/com_irontec_zsugar_pl.properties
+++ b/com_irontec_zsugar_pl.properties
@@ -1,5 +1,5 @@
 # zSugar zimlet properties
-zsugar_title = zsugar: Integracja Zimbra i SugarCRM
+zsugar_title = bsugar: Integracja Zimbra i SugarCRM
 zsugar_tooltip = Zimlet integracji z SugarCRM
 zsugar_powered = http://www.irontec.com
 
@@ -33,7 +33,7 @@ zsugar_notconnected = Nie zalogowano do SugarCRM
 zsugar_connected = Zalogowano do SugarCRM.
 
 
-zsugar_aboutText_pre = <p class='big center'>zSugar&nbsp;
+zsugar_aboutText_pre = <p class='big center'>bSugar&nbsp;
 zsugar_aboutText_post = </p><p class='med center'>Zimlet integracji z SugarCRM</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 
