--- a/com_irontec_zsugar_ru.properties
+++ b/com_irontec_zsugar_ru.properties
@@ -1,5 +1,5 @@
 # zSugar zimlet properties
-zsugar_title = zsugar: Zimbra-SugarCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
+zsugar_title = bsugar: Zimbra-SugarCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
 zsugar_tooltip = SugarCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440 Zimlet 
 zsugar_powered = http://www.irontec.com
 
@@ -32,7 +32,7 @@ zsugar_notconnected = \u041D\u0435 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0
 zsugar_connected = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D.
 
 
-zsugar_aboutText_pre = <p class=\'big center\'>zSugar&nbsp;
+zsugar_aboutText_pre = <p class=\'big center\'>bSugar&nbsp;
 zsugar_aboutText_post = </p><p class=\'med center\'>Sugar CRM Integration Zimlet</p><p id=\'zsuguar_ilogo\'>Copyright 2009 Irontec SL<br /><a href=\'http://www.irontec.com\'>http://www.irontec.com</a></p><p id=\'zsugar_logo\'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 
