--- a/com_irontec_zsugar_es.properties
+++ b/com_irontec_zsugar_es.properties
@@ -1,5 +1,5 @@
 # zSugar zimlet properties
-zsugar_title = zsugar: Integración Zimbra-SugarCRM
+zsugar_title = bsugar: Integración Zimbra-SugarCRM
 zsugar_tooltip = SugarCRM Integration Zimlet 
 zsugar_powered = http://www.irontec.com
 
@@ -33,7 +33,7 @@ zsugar_notconnected = No se encuentra autenticado en el SugarCRM
 zsugar_connected = Su sessión esta autenticada.
 
 
-zsugar_aboutText_pre = <p class='big center'>zSugar&nbsp;
+zsugar_aboutText_pre = <p class='big center'>bSugar&nbsp;
 zsugar_aboutText_post = </p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Proyecto subvencionado por el departamento de cultura (Viceconsejería de Política Lingüística)</p>
 
 zsugar_errorInsertingEmail = Algún error guardando el email.
