bTactic branding. Pending: Actual bTactic images.

--- a/com_irontec_zsugar_eu.properties
+++ b/com_irontec_zsugar_eu.properties
@@ -1,7 +1,7 @@
 # zSugar zimlet properties
 zsugar_title = bsugar: Zimbra-SugarCRM integrazioa
 zsugar_tooltip = SugarCRM Integrazio Zimlet-a
-zsugar_powered = http://www.irontec.com
+zsugar_powered = http://www.btactic.com
 
 zsugar_username = Erabiltzailearen izena
 zsugar_pass = Pasahitza
@@ -34,7 +34,7 @@ zsugar_connected = Zure saioa autentifikatuta dago.
 
 
 zsugar_aboutText_pre = <p class='big center'>bSugar&nbsp;
-zsugar_aboutText_post = </p><p class='med center'>Sugar CRM Integrazio Zimlet-a</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Kultura Sailak (Hizkuntza Politikarako Sailburuordetzak) diruz lagundutako egitasmoa.</p>
+zsugar_aboutText_post = </p><p class='med center'>Sugar CRM Integrazio Zimlet-a</p><p id='zsugar_blogo'>Copyright 2014 BTACTIC, SCCL<br /><a href='http://www.btactic.com'>http://www.btactic.com</a></p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Kultura Sailak (Hizkuntza Politikarako Sailburuordetzak) diruz lagundutako egitasmoa.</p>
 
 
 zsugar_errorInsertingEmail = Arazoren bat email-a gordetzen. 
