--- a/com_irontec_zsugar_pl.properties
+++ b/com_irontec_zsugar_pl.properties
@@ -1,7 +1,7 @@
 # zSugar zimlet properties
 zsugar_title = bsugar: Integracja Zimbra i SugarCRM
 zsugar_tooltip = Zimlet integracji z SugarCRM
-zsugar_powered = http://www.irontec.com
+zsugar_powered = http://www.btactic.com
 
 zsugar_username = Użytkownik
 zsugar_pass = Has\u0142o
@@ -34,7 +34,7 @@ zsugar_connected = Zalogowano do SugarCRM.
 
 
 zsugar_aboutText_pre = <p class='big center'>bSugar&nbsp;
-zsugar_aboutText_post = </p><p class='med center'>Zimlet integracji z SugarCRM</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
+zsugar_aboutText_post = </p><p class='med center'>Zimlet integracji z SugarCRM</p><p id='zsugar_blogo'>Copyright 2014 BTACTIC, SCCL<br /><a href='http://www.btactic.com'>http://www.btactic.com</a></p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 
 zsugar_errorInsertingEmail = Podczas zapisu email wystąpił błąd.
