--- a/com_irontec_zsugar_ru.properties
+++ b/com_irontec_zsugar_ru.properties
@@ -1,7 +1,7 @@
 # zSugar zimlet properties
 zsugar_title = bsugar: Zimbra-SugarCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
 zsugar_tooltip = SugarCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440 Zimlet 
-zsugar_powered = http://www.irontec.com
+zsugar_powered = http://www.btactic.com
 
 zsugar_username = \u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 zsugar_pass = \u041F\u0430\u0440\u043E\u043B\u044C
@@ -33,7 +33,7 @@ zsugar_connected = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0438\u0440\u043E\
 
 
 zsugar_aboutText_pre = <p class=\'big center\'>bSugar&nbsp;
-zsugar_aboutText_post = </p><p class=\'med center\'>Sugar CRM Integration Zimlet</p><p id=\'zsuguar_ilogo\'>Copyright 2009 Irontec SL<br /><a href=\'http://www.irontec.com\'>http://www.irontec.com</a></p><p id=\'zsugar_logo\'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
+zsugar_aboutText_post = </p><p class=\'med center\'>Sugar CRM Integration Zimlet</p><p id='zsugar_blogo'>Copyright 2014 BTACTIC, SCCL<br /><a href='http://www.btactic.com'>http://www.btactic.com</a></p><p id=\'zsuguar_ilogo\'>Copyright 2009 Irontec SL<br /><a href=\'http://www.irontec.com\'>http://www.irontec.com</a></p><p id=\'zsugar_logo\'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 
 zsugar_errorInsertingEmail = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u043F\u043E\u0447\u0442\u044B.
