--- a/doc/README
+++ b/doc/README
@@ -1,4 +1,4 @@
-zSugar 1.4.14
+bSugar 1.4.14
 SugarCRM integration into Zimbra
 
 ================================
@@ -109,6 +109,9 @@ for further information.
 -----------------------------------------------------------------
 ----------------- 7.- Support - Contribution     ----------------
 -----------------------------------------------------------------
+ This zimlet has been improved by BTACTIC, SCCL
+    http://www.btactic.com
+
  This zimlet has been developed by Irontec S.L.
 	http://www.irontec.com
 
