--- a/com_irontec_zsugar_es.properties
+++ b/com_irontec_zsugar_es.properties
@@ -66,3 +66,33 @@ zsugar_lead_assigned = Asignar el Cliente potencial creado a mi usuario
 zsugar_leadError = Error creando Cliente potencial.
 zsugar_leadCreated = Nuevo cliente potencial creado.
 zsugar_enter_filter = Introduzca texto a filtrar...
+
+zsugar_createOpportunity = Nueva oportunidad
+zsugar_Opportunity_assigned = Asignar la Oportunidad creada a mi usuario
+zsugar_OpportunityCreated = Nueva oportunidad creada
+zsugar_OpportunityError = Algún error guardando la oportunidad
+zsugar_Opportunity_name = Nombre
+zsugar_Opportunity_account = Cuenta
+zsugar_Opportunity_date = Fecha
+zsugar_Opportunity_amount = Cantidad
+zsugar_Opportunity_stage = Etapa
+
+zsugar_createCase = Nuevo caso
+zsugar_Case_assigned = Asignar el Caso creado a mi usuario
+zsugar_CaseCreated = Nuevo caso creado
+zsugar_CaseError = Algún error guardando el caso
+zsugar_Case_name = Nombre
+zsugar_Case_account = Cuenta
+zsugar_Case_subject = Asunto
+zsugar_Case_description = Descripci\u00F3n
+zsugar_Case_resolution = Resoluci\u00F3n
+
+zsugar_createContact = Nuevo contacto
+zsugar_contact_assigned = Asignar el Contacto creado a mi usuario
+zsugar_contactCreated = Nuevo contacto creado
+zsugar_contactError = Algún error guardando el contacto
+zsugar_contact_firstname = Nombre
+zsugar_contact_lastname = Apellidos
+zsugar_contact_email = Direcci\u00F3n email
+zsugar_contact_account = Cuenta
+zsugar_contact_desc = Descripci\u00F3n
