SugarCRM references were renamed to SuiteCRM.

--- a/com_irontec_zsugar_es.properties
+++ b/com_irontec_zsugar_es.properties
@@ -1,13 +1,13 @@
 # zSugar zimlet properties
 zsugar_name = zsugar
-zsugar_title = zsugar: Integración Zimbra-SugarCRM
+zsugar_title = zsugar: Integración Zimbra-SuiteCRM
 zsugar_version = 1.4.16
-zsugar_tooltip = SugarCRM Integration Zimlet 
+zsugar_tooltip = SuiteCRM Integration Zimlet
 zsugar_powered = http://www.irontec.com
 
 zsugar_username = Nombre de usuario
 zsugar_pass = Contraseña
-zsugar_url = SugarCRM URL 
+zsugar_url = SuiteCRM URL
 zsugar_cleanpass = Autenticación LDAP
 
 zsugar_seleccionaContacto = Selecciona un contacto.
@@ -31,7 +31,7 @@ zsugar_about = Acerca de
 zsugar_relogin = Forzar Autenticación
 zsugar_status = Estado
 
-zsugar_notconnected = No se encuentra autenticado en el SugarCRM
+zsugar_notconnected = No se encuentra autenticado en el SuiteCRM
 zsugar_connected = Su sessión esta autenticada.
 
 
@@ -42,8 +42,8 @@ zsugar_errorAttachingFile = Algún error guardando el adjunto.
 zsugar_unexpected_error = Ha ocurrido un error inesperado.
 
 zsugar_emailsaved = Email archivado con éxito.
-zsugar_bn_addSugar = Enviar SugarCRM
-zsugar_bn_addSugar_tooltip = Envia el mail seleccionado a SugarCRM
+zsugar_bn_addSugar = Enviar SuiteCRM
+zsugar_bn_addSugar_tooltip = Envia el mail seleccionado a SuiteCRM
 
 zsugar_att_processing = Procesando adjuntos...
 zsugar_att_done = Adjuntos Procesados
