--- a/com_irontec_zsugar_eu.properties
+++ b/com_irontec_zsugar_eu.properties
@@ -1,13 +1,13 @@
 # zSugar zimlet properties
 zsugar_name = zsugar
-zsugar_title = zsugar: Zimbra-SugarCRM integrazioa
+zsugar_title = zsugar: Zimbra-SuiteCRM integrazioa
 zsugar_version = 1.4.16
-zsugar_tooltip = SugarCRM Integrazio Zimlet-a
+zsugar_tooltip = SuiteCRM Integrazio Zimlet-a
 zsugar_powered = http://www.irontec.com
 
 zsugar_username = Erabiltzailearen izena
 zsugar_pass = Pasahitza
-zsugar_url = SugarCRM URL 
+zsugar_url = SuiteCRM URL
 zsugar_cleanpass = LDAP Autentifikazio
 
 zsugar_seleccionaContacto = Kontaktu bat aukeratu.
@@ -30,7 +30,7 @@ zsugar_about = (r)i buruz
 zsugar_relogin = Autentifikazioa behartu
 zsugar_status = Egoera
 
-zsugar_notconnected = Ez dago SugarCRM-en autentifikatuta.
+zsugar_notconnected = Ez dago SuiteCRM-en autentifikatuta.
 zsugar_connected = Zure saioa autentifikatuta dago.
 
 
@@ -44,8 +44,8 @@ zsugar_emailsaved = Email-a gorde izan da.
 zsugar_errorAttachingFile = Atxikitutako dokumentua gordetzerakoan erroreren bat gertatu/egon da.
 zsugar_unexpected_error = Espero ez zen errore bat gertatu/egon da
 
-zsugar_bn_addSugar = SugarCRM bidali
-zsugar_bn_addSugar_tooltip = Aukeratutako e-maila SugarCRM-ra bidali
+zsugar_bn_addSugar = SuiteCRM bidali
+zsugar_bn_addSugar_tooltip = Aukeratutako e-maila SuiteCRM-ra bidali
 
 zsugar_att_processing = Atxikitutako dokumentuak prozesatzen... 
 zsugar_att_done = Atxikitutako dokumentuak prozesatu dira.
