--- a/com_irontec_zsugar_pl.properties
+++ b/com_irontec_zsugar_pl.properties
@@ -1,20 +1,20 @@
 # zSugar zimlet properties
 zsugar_name = zsugar
-zsugar_title = zsugar: Integracja Zimbra i SugarCRM
+zsugar_title = zsugar: Integracja Zimbra i SuiteCRM
 zsugar_version = 1.4.16
-zsugar_tooltip = Zimlet integracji z SugarCRM
+zsugar_tooltip = Zimlet integracji z SuiteCRM
 zsugar_powered = http://www.irontec.com
 
 zsugar_username = Użytkownik
 zsugar_pass = Has\u0142o
-zsugar_url = URL do SugarCRM 
+zsugar_url = URL do SuiteCRM
 zsugar_cleanpass = Autentyfikacja przez LDAP
 
 zsugar_seleccionaContacto = Wybierz osobę
 zsugar_loggedin = Zalogowano
 zsugar_peddingTransaction = Trwa przetwarzanie żądania.
 zsugar_notValidAuth = Niewłaściwe dane logowania.
-zsugar_noOptsSelected = Konto w SugarCRM nie jest skonfiguowane.<br />Kliknij podwójnie aby przejść do konfiguracji
+zsugar_noOptsSelected = Konto w SuiteCRM nie jest skonfiguowane.<br />Kliknij podwójnie aby przejść do konfiguracji
 zsugar_noresultsfound = Niczego nie znaleziono.
 zsugar_confirmExport = Ten email został już wyeksportowany. <br /> Kontynuować mimo to?
 zsugar_confirmExportTitle = Potwierdź eksport
@@ -31,19 +31,19 @@ zsugar_about = O programie
 zsugar_relogin = Wymuś logowanie
 zsugar_status = Status
 
-zsugar_notconnected = Nie zalogowano do SugarCRM
-zsugar_connected = Zalogowano do SugarCRM.
+zsugar_notconnected = Nie zalogowano do SuiteCRM
+zsugar_connected = Zalogowano do SuiteCRM.
 
 
-zsugar_aboutText = <p class='big center'>zSugar 1.4.16</p><p class='med center'>Zimlet integracji z SugarCRM</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
+zsugar_aboutText = <p class='big center'>zSugar 1.4.16</p><p class='med center'>Zimlet integracji z SuiteCRM</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 zsugar_errorInsertingEmail = Podczas zapisu email wystąpił błąd.
 zsugar_errorAttachingFile = Podczas zapisu pliku załącznika wystąpił błąd.
 zsugar_unexpected_error = Wystąpił nieokreślony błąd.
 
 zsugar_emailsaved = Pomyślnie zapisano wiadomość email.
-zsugar_bn_addSugar = Zapisz w SugarCRM
-zsugar_bn_addSugar_tooltip = Zapisuje wybrany email w SugarCRM
+zsugar_bn_addSugar = Zapisz w SuiteCRM
+zsugar_bn_addSugar_tooltip = Zapisuje wybrany email w SuiteCRM
 
 zsugar_att_processing = Przesyłanie załączników...
 zsugar_att_done = Załączniki przesłane
