--- a/com_irontec_zsugar_ru.properties
+++ b/com_irontec_zsugar_ru.properties
@@ -1,13 +1,13 @@
 # zSugar zimlet properties
 zsugar_name = zsugar
-zsugar_title = zsugar: Zimbra-SugarCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
+zsugar_title = zsugar: Zimbra-SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
 zsugar_version = 1.4.16
-zsugar_tooltip = SugarCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440 Zimlet 
+zsugar_tooltip = SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440 Zimlet
 zsugar_powered = http://www.irontec.com
 
 zsugar_username = \u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 zsugar_pass = \u041F\u0430\u0440\u043E\u043B\u044C
-zsugar_url = SugarCRM URL 
+zsugar_url = SuiteCRM URL
 zsugar_cleanpass = LDAP \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
 
 zsugar_seleccionaContacto = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043A\u043E\u043D\u0442\u0430\u043A\u0442
@@ -30,7 +30,7 @@ zsugar_about = \u041E \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0435
 zsugar_relogin = \u0417\u0430\u043F\u0443\u0441\u0442\u0438\u0442\u044C \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044E
 zsugar_status = \u0421\u0442\u0430\u0442\u0443\u0441
 
-zsugar_notconnected = \u041D\u0435 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D \u0432 SugarCRM
+zsugar_notconnected = \u041D\u0435 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D \u0432 SuiteCRM
 zsugar_connected = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D.
 
 
@@ -41,8 +41,8 @@ zsugar_errorAttachingFile = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0
 zsugar_unexpected_error = \u041D\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043D\u0430\u044F \u043E\u0448\u0438\u0431\u043A\u0430.
 
 zsugar_emailsaved = \u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u043E \u0443\u0441\u043F\u0435\u0448\u043D\u043E.
-zsugar_bn_addSugar = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C SugarCRM
-zsugar_bn_addSugar_tooltip = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F \u0432 SugarCRM
+zsugar_bn_addSugar = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C SuiteCRM
+zsugar_bn_addSugar_tooltip = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F \u0432 SuiteCRM
 
 zsugar_att_processing = \u041E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0430 \u0432\u043B\u043E\u0436\u0435\u043D\u0438\u044F...
 zsugar_att_done = \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u0430\u043D\u043E
