--- a/com_irontec_zsugar_es.properties
+++ b/com_irontec_zsugar_es.properties
@@ -1,4 +1,4 @@
-# zSugar zimlet properties
+# zSuitecrm zimlet properties
 zsugar_name = zsugar
 zsugar_title = zsugar: Integración Zimbra-SuiteCRM
 zsugar_version = 1.4.16
@@ -35,7 +35,7 @@ zsugar_notconnected = No se encuentra autenticado en el SuiteCRM
 zsugar_connected = Su sessión esta autenticada.
 
 
-zsugar_aboutText = <p class='big center'>zSugar 1.4.16</p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Proyecto subvencionado por el departamento de cultura (Viceconsejería de Política Lingüística)</p>
+zsugar_aboutText = <p class='big center'>zSuitecrm 1.4.16</p><p class='med center'>Sugar CRM Integration Zimlet</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Proyecto subvencionado por el departamento de cultura (Viceconsejería de Política Lingüística)</p>
 
 zsugar_errorInsertingEmail = Algún error guardando el email.
 zsugar_errorAttachingFile = Algún error guardando el adjunto.
