--- a/com_irontec_zsugar_pl.properties
+++ b/com_irontec_zsugar_pl.properties
@@ -1,4 +1,4 @@
-# zSugar zimlet properties
+# zSuitecrm zimlet properties
 zsugar_name = zsugar
 zsugar_title = zsugar: Integracja Zimbra i SuiteCRM
 zsugar_version = 1.4.16
@@ -35,7 +35,7 @@ zsugar_notconnected = Nie zalogowano do SuiteCRM
 zsugar_connected = Zalogowano do SuiteCRM.
 
 
-zsugar_aboutText = <p class='big center'>zSugar 1.4.16</p><p class='med center'>Zimlet integracji z SuiteCRM</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
+zsugar_aboutText = <p class='big center'>zSuitecrm 1.4.16</p><p class='med center'>Zimlet integracji z SuiteCRM</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
 
 zsugar_errorInsertingEmail = Podczas zapisu email wystąpił błąd.
 zsugar_errorAttachingFile = Podczas zapisu pliku załącznika wystąpił błąd.
