--- a/com_irontec_zsugar_eu.properties
+++ b/com_irontec_zsugar_eu.properties
@@ -35,7 +35,7 @@ zsugar_connected = Zure saioa autentifikatuta dago.
 
 
 
-zsugar_aboutText = <p class='big center'>zSuitecrm 1.4.16</p><p class='med center'>Sugar CRM Integrazio Zimlet-a</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Kultura Sailak (Hizkuntza Politikarako Sailburuordetzak) diruz lagundutako egitasmoa.</p>
+zsugar_aboutText = <p class='big center'>zSuitecrm 1.4.16</p><p class='med center'>SuiteCRM Integrazio Zimlet-a</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Kultura Sailak (Hizkuntza Politikarako Sailburuordetzak) diruz lagundutako egitasmoa.</p>
 
 zsugar_errorInsertingEmail = Arazoren bat email-a gordetzen. 
 
