--- a/com_irontec_zsugar/com_irontec_zsugar_eu.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_eu.properties
@@ -1,7 +1,7 @@
 # zSuitecrm zimlet properties
 zsugar_name = zsugar
 zsugar_title = zsugar: Zimbra-SuiteCRM integrazioa
-zsugar_version = 1.4.16
+zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM Integrazio Zimlet-a
 zsugar_powered = http://www.irontec.com
 
@@ -35,7 +35,7 @@ zsugar_connected = Zure saioa autentifikatuta dago.
 
 
 
-zsugar_aboutText = <p class='big center'>zSuitecrm 1.4.16</p><p class='med center'>SuiteCRM Integrazio Zimlet-a</p><p id='zsuguar_ilogo'>Copyright 2009 Irontec SL<br /><a href='http://www.irontec.com'>http://www.irontec.com</a></p><p id='zsugar_logo'>Kultura Sailak (Hizkuntza Politikarako Sailburuordetzak) diruz lagundutako egitasmoa.</p>
+zsugar_aboutText = @@ABOUT_STANZA@@
 
 zsugar_errorInsertingEmail = Arazoren bat email-a gordetzen. 
 
