--- a/com_irontec_zsugar/com_irontec_zsugar_ru.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_ru.properties
@@ -1,7 +1,7 @@
 # zSuitecrm zimlet properties
 zsugar_name = zsugar
 zsugar_title = zsugar: Zimbra-SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
-zsugar_version = 1.4.16
+zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440 Zimlet
 zsugar_powered = http://www.irontec.com
 
@@ -34,7 +34,7 @@ zsugar_notconnected = \u041D\u0435 \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0
 zsugar_connected = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D.
 
 
-zsugar_aboutText = <p class=\'big center\'>zSuitecrm 1.4.16</p><p class=\'med center\'>SuiteCRM Integration Zimlet</p><p id=\'zsuguar_ilogo\'>Copyright 2009 Irontec SL<br /><a href=\'http://www.irontec.com\'>http://www.irontec.com</a></p><p id=\'zsugar_logo\'>Project funded by the Department of Culture (Vice-Ministry for Language Policy)</p>
+zsugar_aboutText = @@ABOUT_STANZA@@
 
 zsugar_errorInsertingEmail = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u043F\u043E\u0447\u0442\u044B.
 zsugar_errorAttachingFile = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u0432\u043B\u043E\u0436\u0435\u043D\u0438\u044F.
