Last zsugar references were renamed to zSuitecrm.

--- a/com_irontec_zsugar/com_irontec_zsugar_eu.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_eu.properties
@@ -1,6 +1,6 @@
 # zSuitecrm zimlet properties
-zsugar_name = zsugar
-zsugar_title = zsugar: Zimbra-SuiteCRM integrazioa
+zsugar_name = zSuitecrm
+zsugar_title = zSuitecrm: Zimbra-SuiteCRM integrazioa
 zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM Integrazio Zimlet-a
 zsugar_powered = http://www.irontec.com
