--- a/com_irontec_zsugar/com_irontec_zsugar_pl.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_pl.properties
@@ -1,6 +1,6 @@
 # zSuitecrm zimlet properties
-zsugar_name = zsugar
-zsugar_title = zsugar: Integracja Zimbra i SuiteCRM
+zsugar_name = zSuitecrm
+zsugar_title = zSuitecrm: Integracja Zimbra i SuiteCRM
 zsugar_version = @@VERSION@@
 zsugar_tooltip = Zimlet integracji z SuiteCRM
 zsugar_powered = http://www.irontec.com
