--- a/com_irontec_zsugar/com_irontec_zsugar_ru.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_ru.properties
@@ -1,6 +1,6 @@
 # zSuitecrm zimlet properties
-zsugar_name = zsugar
-zsugar_title = zsugar: Zimbra-SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
+zsugar_name = zSuitecrm
+zsugar_title = zSuitecrm: Zimbra-SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
 zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440 Zimlet
 zsugar_powered = http://www.irontec.com
