--- a/com_irontec_zsugar/com_irontec_zsugar_es.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_es.properties
@@ -1,6 +1,6 @@
 # zSuitecrm zimlet properties
-zsugar_name = zsugar
-zsugar_title = zsugar: Integración Zimbra-SuiteCRM
+zsugar_name = zSuitecrm
+zsugar_title = zSuitecrm: Integración Zimbra-SuiteCRM
 zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM Integration Zimlet
 zsugar_powered = http://www.irontec.com
