--- a/com_irontec_zsugar/com_irontec_zsugar_pl.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_pl.properties
@@ -3,7 +3,7 @@ zsugar_name = zSuitecrm
 zsugar_title = zSuitecrm: Integracja Zimbra i SuiteCRM
 zsugar_version = @@VERSION@@
 zsugar_tooltip = Zimlet integracji z SuiteCRM
-zsugar_powered = http://www.irontec.com
+zsugar_powered = @@POWERED_LINK@@
 
 zsugar_username = Użytkownik
 zsugar_pass = Has\u0142o
