--- a/com_irontec_zsugar/com_irontec_zsugar_ru.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_ru.properties
@@ -3,7 +3,7 @@ zsugar_name = zSuitecrm
 zsugar_title = zSuitecrm: Zimbra-SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440
 zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0442\u043E\u0440 Zimlet
-zsugar_powered = http://www.irontec.com
+zsugar_powered = @@POWERED_LINK@@
 
 zsugar_username = \u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 zsugar_pass = \u041F\u0430\u0440\u043E\u043B\u044C
