--- a/com_irontec_zsugar/com_irontec_zsugar_eu.properties
+++ b/com_irontec_zsugar/com_irontec_zsugar_eu.properties
@@ -3,7 +3,7 @@ zsugar_name = zSuitecrm
 zsugar_title = zSuitecrm: Zimbra-SuiteCRM integrazioa
 zsugar_version = @@VERSION@@
 zsugar_tooltip = SuiteCRM Integrazio Zimlet-a
-zsugar_powered = http://www.irontec.com
+zsugar_powered = @@POWERED_LINK@@
 
 zsugar_username = Erabiltzailearen izena
 zsugar_pass = Pasahitza
